@@ -18,9 +18,10 @@ public interface AsyncResult
 {
     /**
      * If not completed, cancels the request. This is a local
-     * operation, it won't cancel the request on the server side. The
-     * request won't be sent if it was waiting to be sent or the
-     * response will be ignored if it received after the callback.
+     * operation, it won't cancel the request on the server side.
+     * Calling <code>cancel</code> prevents a queued request from
+     * being sent or ignores a reply if the request has already
+     * been sent.
      **/
     public void cancel();
 
